[DBE-050] add swagger api
